--- a/talks/presentations/moral-injury-summit-2025/index.qmd
+++ b/talks/presentations/moral-injury-summit-2025/index.qmd
@@ -18,10 +18,10 @@ While posttraumatic stress disorder (PTSD) is widely known, a newer concept of t
 
 \[images coming soon\]
 
-# Slides
+# Links
 
-Coming soon.
+Here are [the slides](https://drive.google.com/file/d/1l0d5Lt1-c1jXyWygymBHGUl8CDHd88F9/view?usp=share_link).
 
 # Citation
 
-Hodges, T.J. (10 June 2025). “Understanding moral injury for suicide prevention.” Let’s Connect Summit. Savannah, Georgia.
+Hodges, T.J. (June 2025). “Understanding moral injury for suicide prevention.” Let’s Connect Summit. Savannah, Georgia.
