--- a/talks/presentations/conflict-suicide-summit-2025/index.qmd
+++ b/talks/presentations/conflict-suicide-summit-2025/index.qmd
@@ -17,9 +17,9 @@ draft: false
 
 Presentation at the 2025 Let's Connect Suicide Prevention Summit on how conflict resolution can be used in suicide prevention.
 
-# Slides
+# Links
 
-Coming soon.
+View the [slides here](https://drive.google.com/file/d/1Nz1dEeLEfbuqkz_f3XXMqE3p5wKCx_c3/view?usp=share_link).
 
 # Citation
 
