--- a/talks/presentations/identity-summit-2024/index.qmd
+++ b/talks/presentations/identity-summit-2024/index.qmd
@@ -15,6 +15,8 @@ draft: false
 
 # Summary
 
+I presented ideas from a few different papers, both [published](../../../research/articles/2025-moral-injury-identity/index.qmd) and [in progress.](../../../research/working-papers/identity-reintegration/index.qmd)
+
 # Slides
 
 # Citation
