--- a/data-science/index.qmd
+++ b/data-science/index.qmd
@@ -5,6 +5,8 @@ listing:
     type: default # or `default` or `table`
     sort: "date desc" # can also sort on more than one field
     categories: true # allows you to sort posts by assigned categories 
+    template: ../html/data-science/listing.ejs
+page-layout: full
 ---
 
 Here are some selected data science projects I have completed. You can learn more about the project, see the analysis code, and view some of the highlights from each project.
