--- a/data-science/index.qmd
+++ b/data-science/index.qmd
@@ -2,9 +2,9 @@
 title: Data Science Portfolio
 listing: 
     contents: "posts/*/index.qmd"
-    type: default # or `default` or `table`
-    sort: "date desc" # can also sort on more than one field
-    categories: true # allows you to sort posts by assigned categories 
+    type: default
+    sort: "date desc"
+    categories: true 
     template: ../html/data-science/listing.ejs
 page-layout: full
 ---
